# kanon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
conformance-runners/: README.md
conformance-runners/x402/: run.py
crates/kanon-cli/: Cargo.toml
crates/kanon-cli/src/: lib.rs  main.rs
crates/kanon-cli/tests/: cli.rs  provenance.rs  schema.rs  selfcheck.rs
crates/kanon-core/: Cargo.toml
crates/kanon-core/src/: caip2.rs  crypto.rs  eip712.rs  error.rs  lib.rs  model.rs  tests.rs  verify.rs
crates/kanon-gen/: Cargo.toml
crates/kanon-gen/src/: constants.rs  eip712.rs  error.rs  lib.rs  model.rs  scenarios.rs  serialize.rs  sign.rs  tests.rs
crosscheck/: README.md  requirements.txt  test_crosscheck.py  verify.py
schema/: provenance.json  reason-codes.md  vector.schema.json
vectors/: x402-evm-eip3009-cross-chain-replay-001.json  x402-evm-eip3009-cross-contract-replay-001.json  x402-evm-eip3009-expired-001.json  x402-evm-eip3009-nonce-replay-001.json  x402-evm-eip3009-sig-malleable-high-s-001.json  x402-evm-eip3009-valid-baseline-001.json
vectors/x402/exact/evm/eip3009/: x402-evm-eip3009-amount-insufficient-001.json  x402-evm-eip3009-cross-chain-replay-001.json  x402-evm-eip3009-cross-contract-replay-001.json  x402-evm-eip3009-expired-001.json  x402-evm-eip3009-network-mismatch-001.json  x402-evm-eip3009-nonce-replay-001.json  x402-evm-eip3009-not-yet-valid-001.json  x402-evm-eip3009-sig-malleable-high-s-001.json  x402-evm-eip3009-valid-baseline-001.json
